# BejSnap

./: .gitignore  CMakeLists.txt  GITHUB_PUBLISHING_SUMMARY.md  GITHUB_SETUP.md  LICENSE  README.md  fix_github_remote.sh  github_publish.sh
.github/workflows/: build.yml
resources/: bejsnap.qrc
resources/styles/: dark.qss  light.qss
src/: bejsnapapp.cpp  bejsnapapp.h  bejsnapwindow.cpp  bejsnapwindow.h  constants.h  filemanager.cpp  filemanager.h  main.cpp  previewwindow.cpp  previewwindow.h  regionselector.cpp  regionselector.h  settingsdialog.cpp  settingsdialog.h  thememanager.cpp  thememanager.h
